--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,7 +17,9 @@
 </nav>
     <div class="jumbotron"  style="padding:40px;">
       <h1>Hello, world!</h1>
-      <h2>This is a simple hello World Web Page, this message will be modifed.</h2>
+      <h1>Helm Chart Application</h1>
+      <h2>This is a simple hello World Web Page, teployed with HELM and ArgoCD.</h2>
   </div>
+  < img src="https://www.nclouds.com/img/services/toolkit/argocd.png" >
 </body>
 </html>
