--- a/helm/html/index.html
+++ b/helm/html/index.html
@@ -39,7 +39,7 @@
         <p><a class="btn btn-primary btn-lg" href="/readiness/400" role="button">Set Not Ready</a></p>
         <p><a class="btn btn-primary btn-lg" href="/health/readiness" role="button">Check readiness</a></p> 
         <p><a class="btn btn-primary btn-lg" href="/health/readiness" role="button">Check readiness</a></p> 
-        <p><a class="btn btn-primary btn-lg" href="/health/readiness" role="button">Check readiness</a></p> 
+        <p><a class="btn btn-primary btn-lg" href="/health/readiness" role="button">ArgoCD SyncWaves</a></p> 
   </div>
 </body>
 </html>
