--- a/helm/html/index.html
+++ b/helm/html/index.html
@@ -38,7 +38,7 @@
         <p><a class="btn btn-primary btn-lg" href="/health/liveliness" role="button">Check liveliness</a></p>
         <p><a class="btn btn-primary btn-lg" href="/readiness/400" role="button">Set Not Ready</a></p>
         <p><a class="btn btn-primary btn-lg" href="/health/readiness" role="button">Check readiness</a></p> 
-        <p><a class="btn btn-primary btn-lg" href="/health/readiness" role="button">Check readiness</a></p> 
+        <p><a class="btn btn-primary btn-lg" href="/health/readiness" role="button">ArgoCD SyncHooks Test</a></p> 
         <p><a class="btn btn-primary btn-lg" href="/health/readiness" role="button">ArgoCD SyncHooks</a></p> 
   </div>
 </body>
